...
    selectedRecordId: String,
    currency: String,
    records: List<Record>,
    onFormatDate: (Long) -> String,
    onDetailsShow: (String, Record) -> Unit,
    modifier: Modifier) {
    LazyColumn(
        state = listState,
        verticalArrangement = Arrangement.spacedBy(dimensionResource(id = R.dimen.items_list_spacing)),
        horizontalAlignment = Alignment.CenterHorizontally,
        contentPadding = PaddingValues(dimensionResource(id = R.dimen.items_list_padding)),
        modifier = modifier
            .fillMaxSize()
...
        speed = LOTTIE_SPEED,
        isPlaying = deletionResult.isSuccess())
    ModalBottomSheet(
        onDismissRequest = onDismiss,
        sheetState = sheetState,
        modifier = Modifier
            .testTag("DetailsSheet")) {
        Column(
            horizontalAlignment = Alignment.CenterHorizontally,
            modifier = Modifier
                .fillMaxWidth()
                .padding(10.dp)
                .padding(bottom = dimensionResource(id = R.dimen.sheet_bottom_padding))
...
