...

    <string name="create_custom_category">Create custom category</string>
    <string name="give_a_name_to_category">Give a name to your category</string>
    <string name="unknown">Unknown</string>

    <string name="transaction_history">Transaction History</string>
    <string name="nothing_to_show">Nothing to show</string>

    <string name="expense_categories">Expense categories</string>
    <string name="income_categories">Income categories</string>
    <string name="categories">Categories</string>
    <string name="financial_accounts">Financial Accounts</string>
    <string name="switch_to_this_account">Switch to this account</string>
...
